# ovh-cli

./: .gitignore  CMakeLists.txt  FindEditLine.cmake  FindIntl.cmake  FindReadline.cmake  FindSQLite3.cmake  README.md  README.md.in  account_api.h  command.h  common.h  config.h  config.h.in  date.c  date.h  endpoints.h  error.c  error.h  graph.c  graph.h  graph_main.h  graphic.c  graphic.h  json.c  json.h  linenoise.c  linenoise.h  main.c  model.c  model.h  nearest_power.h  schema.sql  sqlite.c  sqlite.h  table.c  table.h  types.md  update_translations.sh  util.c  util.h
commands/: account.c  account.h  cloud.c  dedicated.c  domain.c  hosting.c  key.c  me.c  record.h  support.c  vps.c
i18n/: CMakeLists.txt  ovh-cli.pot
i18n/fr/: CMakeLists.txt  ovh-cli.po
i18n/french/: ovh-cli.po
modules/: api.c  api.h  base.c  conv.c  conv.h  curl.c  home.c  home.h  libxml.c  libxml.h  nls.c  openssl.c  sqlite.c  sqlite.h  table.c  table.h
scripts/: generate_and_upload_ssh_key.sh  setup_dkim.sh
struct/: dptrarray.c  dptrarray.h  hashtable.c  hashtable.h  iterator.c  iterator.h  stack.c  stack.h  xtring.c  xtring.h
